some spacing issues fixed

--- a/browser/scss/loops/main.scss
+++ b/browser/scss/loops/main.scss
@@ -4,6 +4,10 @@
   }
 }
 
+.browse-mixes {
+  margin-top: 40px;
+}
+
 .loops {
   .filters {
     margin-top: 30px;
@@ -33,8 +37,8 @@
 /* if you want to add selects: use class "style-select" to match instrument select in mix edit page */
 
 .form-btn {
-  padding-top: 30px;
-  padding-bottom: 10px;
+  padding-top: 25px;
+  padding-bottom: 15px;
   margin-top: 25px;
   margin-bottom: 10px;
   margin-left: 15px;
@@ -57,7 +61,7 @@
   h4 {
     font-family: 'Pontano Sans';
     width: 100%;
-    color: white;
+    /* color: white; */
     display: inline-block;
     vertical-align: middle;
     line-height: normal;    
